engines/ep/src/dcp/active_stream.cc
@@ -261,8 +261,7 @@ void ActiveStream::registerCursor(CheckpointManager& chkptmgr,
         curChkSeqno = result.nextSeqno;
         cursor = result.cursor;
 
-        const auto lockedCursor = result.cursor.lock();
-        Expects(lockedCursor);
+        Expects(result.position);
         log(spdlog::level::level_enum::info,
             "{} ActiveStream::registerCursor name \"{}\", "
             "lastProcessedSeqno:{}, pendingBackfill:{}, "
@@ -272,8 +271,8 @@ void ActiveStream::registerCursor(CheckpointManager& chkptmgr,
             lastProcessedSeqno,
             pendingBackfill,
             result.tryBackfill,
-            ::to_string((*lockedCursor->getPos())->getOperation()),
-            (*lockedCursor->getPos())->getBySeqno(),
+            ::to_string(result.position->getOperation()),
+            result.position->getBySeqno(),
             result.nextSeqno);
     } catch (std::exception& error) {
         log(spdlog::level::level_enum::warn,
@@ -1813,8 +1812,7 @@ void ActiveStream::scheduleBackfill_UNLOCKED(DcpProducer& producer,
             return;
         }
 
-        const auto lockedCursor = registerResult.cursor.lock();
-        Expects(lockedCursor);
+        Expects(registerResult.position);
         log(spdlog::level::level_enum::info,
             "{} ActiveStream::scheduleBackfill_UNLOCKED register cursor with "
             "name \"{}\" lastProcessedSeqno:{}, result{{tryBackfill:{}, op:{}, "
@@ -1823,8 +1821,8 @@ void ActiveStream::scheduleBackfill_UNLOCKED(DcpProducer& producer,
             name_,
             lastReadSeqno.load(),
             registerResult.tryBackfill,
-            ::to_string((*lockedCursor->getPos())->getOperation()),
-            (*lockedCursor->getPos())->getBySeqno(),
+            ::to_string(registerResult.position->getOperation()),
+            registerResult.position->getBySeqno(),
             registerResult.nextSeqno);
 
         curChkSeqno = registerResult.nextSeqno;
